[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/settings_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto_r_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/roboto_b_36.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/scenes/button2.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="SettingsScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 1 )

[node name="M" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
custom_constants/margin_right = 4
custom_constants/margin_top = 16
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="V" type="VBoxContainer" parent="M"]
margin_left = 4.0
margin_top = 16.0
margin_right = 1276.0
margin_bottom = 796.0

[node name="HS3" type="HSeparator" parent="M/V"]
margin_right = 1272.0
margin_bottom = 207.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTitle" type="Label" parent="M/V"]
margin_top = 211.0
margin_right = 1272.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="HS" type="HSeparator" parent="M/V"]
margin_top = 258.0
margin_right = 1272.0
margin_bottom = 322.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowNumbers" type="CheckButton" parent="M/V"]
margin_top = 326.0
margin_right = 1272.0
margin_bottom = 366.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Show tile numbers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS2" type="HSeparator" parent="M/V"]
margin_top = 370.0
margin_right = 1272.0
margin_bottom = 402.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="M/V"]
margin_top = 406.0
margin_right = 1272.0
margin_bottom = 446.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="G" type="HBoxContainer" parent="M/V/M"]
margin_left = 8.0
margin_right = 1264.0
margin_bottom = 40.0

[node name="SizeTitle" type="Label" parent="M/V/M/G"]
margin_top = 10.0
margin_right = 76.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "Board Size"

[node name="HSeparator" type="HSeparator" parent="M/V/M/G"]
margin_left = 80.0
margin_right = 83.0
margin_bottom = 4.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="Decrease" parent="M/V/M/G" instance=ExtResource( 4 )]
margin_left = 1139.0
margin_right = 1189.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )

[node name="SizeValue" type="Label" parent="M/V/M/G"]
margin_left = 1193.0
margin_top = 10.0
margin_right = 1202.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "4"

[node name="Increase" parent="M/V/M/G" instance=ExtResource( 4 )]
margin_left = 1206.0
margin_right = 1256.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )

[node name="VS" type="HSeparator" parent="M/V"]
margin_top = 450.0
margin_right = 1272.0
margin_bottom = 480.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 30

[node name="VS2" type="HSeparator" parent="M/V"]
margin_top = 484.0
margin_right = 1272.0
margin_bottom = 514.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 30

[node name="Button2" parent="M/V" instance=ExtResource( 4 )]
margin_left = 611.0
margin_top = 518.0
margin_right = 661.0
margin_bottom = 568.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VS3" type="HSeparator" parent="M/V"]
margin_top = 572.0
margin_right = 1272.0
margin_bottom = 780.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 4 )
[connection signal="toggled" from="M/V/ShowNumbers" to="." method="_on_ShowNumbers_toggled"]
